versions/v2.12/modules/en/pages/security/compliance-scans/install-rancher-compliance.adoc
= Install {rancher-product-name} Compliance
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2025-08-26
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/compliance-scan-guides/install-rancher-compliance.adoc 
:product-path: security/compliance-scans/install-rancher-compliance.adoc
:experimental:

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to install Compliance and click *Explore*.
. In the left navigation bar, click *Apps > Charts*.
. Click *Compliance*
. Click *Install*.

*Result:* The compliance scan application is deployed on the Kubernetes cluster.

[NOTE]
====

If you are running Kubernetes v1.24 or earlier, and have a xref:security/psp/create.adoc[Pod Security Policy] (PSP) hardened cluster, CIS Benchmark 4.0.0 and later disable PSPs by default. To install CIS Benchmark on a PSP-hardened cluster, set `global.psp.enabled` to `true` in the values before installing the chart. xref:security/psa-pss.adoc[Pod Security Admission] (PSA) hardened clusters aren't affected.
====

